# jplearnbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
content/: dictionary.jsonl  jlpt-voc-1.utf.txt  jlpt-voc-2.utf.txt  jlpt-voc-3.utf.txt  jlpt-voc-4.utf.txt
src/: dict_combine.rs  dictionary.rs  lib.rs
src/dict_combine/: dict.rs
