[package]
name = "jplearnbot"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
const_format = { version = "0.2.34", features = ["fmt"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
image = "0.25.6"
poise = "0.6.1"
rand = "0.9.1"
regex = "1.11.1"
rusttype = "0.9.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.0", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4"] }
